ci: 🎡 change deployment to firebase

--- a/src/stories/hero.stories.mdx
+++ b/src/stories/hero.stories.mdx
@@ -21,6 +21,7 @@ import DHero from '../components/d-hero.vue';
                 <DHero title="Disco Design System" subtitle="Powering CCV's websites and applications"/>
                 <DHero title="Disco Design System" subtitle="Powering CCV's websites and applications" variant="link"/>
                 <DHero title="Disco Design System" subtitle="Powering CCV's websites and applications" variant="light"/>
+                <DHero title="Disco Design System" subtitle="Powering CCV's websites and applications" variant="light" :fullHeight="true"/>
             </div>
             `
         }}
