--- a/src/stories/colors.stories.mdx
+++ b/src/stories/colors.stories.mdx
@@ -1,8 +1,9 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
+import { withA11y } from '@storybook/addon-a11y';
 import ColorPalette from '../components/colors/ColorPalette.vue';
 import { yellows, greens, colors, greys } from './colors';
 
-<Meta title="Style Guide|Colors" component={ColorPalette} />
+<Meta title="Style Guide|Colors" component={ColorPalette} decorators={[withA11y]} />
 
 # Colors
 
