feat: 🎸 add storybook level theme

--- a/src/stories/buttons.stories.mdx
+++ b/src/stories/buttons.stories.mdx
@@ -4,7 +4,7 @@ import DButton from '../components/d-button.vue';
 import DIcon from '../components/d-icon.vue';
 import { action } from "@storybook/addon-actions";
 
-<Meta title="Elements|Buttons" component={DButton} decorators={[withA11y]} />
+<Meta title="Elements|Buttons" component={DButton} />
 
 # Buttons
 <Props of={DButton} />
@@ -25,7 +25,7 @@ import { action } from "@storybook/addon-actions";
 ```
 
 <Preview>
-  <Story name="Buttons">
+  <Story name="Buttons" decorators={[withA11y]}>
     {{
         components: { DButton, DIcon },
         methods: { action: action("clicked") },
