feat: add more to story, add tests, update vue template

--- a/src/stories/modal.stories.mdx
+++ b/src/stories/modal.stories.mdx
@@ -22,15 +22,24 @@ import { action } from "@storybook/addon-actions";
       methods: { action: action("clicked") },
       data() {
           return {
-              showModal: false
+              modals: [
+                { title: 'Modal with Title', content: null, footer: false, show: false},
+                { title: 'Modal with Title and Content', content: { component: "Modal", triggeredBy: "Button" }, footer: false, show: false},
+                { title: 'Modal with Title, Content and Footer', content: { component: "Modal", triggeredBy: "Button" }, footer: true, show: false}
+              ]
           }
       },
       template: `
       <div>
-        <div>
-          <h1> Modal with title </h1>
-          <DButton name="Show Modal" @click="showModal = true" />
-          <DModal v-if="showModal" title="Modal Title" @close="showModal = false" />
+        <div v-for="modal  in modals">
+          <h1 style="margin-bottom: 1rem;"> {{ modal.title }}</h1>
+          <DButton name="Show Modal" @click="modal.show = !modal.show" />
+          <DModal v-if="modal.show" :title="modal.title" :footer="modal.footer" :content="modal.content" @close="modal.show = !modal.show" > 
+            <template #footer>
+              <DButton name="Save changes" variant="success" @click="modal.show = !modal.show"/>
+              <DButton name="Cancel" @click="modal.show = !modal.show"/>
+            </template>
+          </DModal>
         </div>
       </div>
       `
