--- a/src/stories/modal.stories.mdx
+++ b/src/stories/modal.stories.mdx
@@ -16,23 +16,81 @@ import { action } from "@storybook/addon-actions";
 ```
 
 <Preview>
-  <Story name="Modal" decorators={[withA11y]}>
+  <Story name="Modal with content" decorators={[withA11y]}>
     {{
       components: { DModal, DButton },
       methods: { action: action("clicked") },
       data() {
           return {
-              modals: [
-                { closeButtonText: 'Close', closeOptions: 'both', show: false }
+              modalImageColors: [
+                { closeOptions: 'header', variant: 'light', show: false },
+                { closeOptions: 'header', variant: 'light', colorbar: 'success', show: false },
+                { closeOptions: 'header', variant: 'light', colorbar: 'info', show: false },
+                { closeOptions: 'header', variant: 'primary', colorbar: 'warning', show: false },
+                { closeOptions: 'header', variant: 'warning', colorbar: 'danger', show: false }
+              ],
+              modalTextColors: [
+                { closeOptions: 'header', variant: 'light', show: false },
+                { closeOptions: 'header', variant: 'light', colorbar: 'success', show: false },
+                { closeOptions: 'header', variant: 'info', colorbar: 'success', show: false },
+                { closeOptions: 'header', variant: 'warning', colorbar: 'danger', show: false }
+              ],
+              modalSizes: [
+                { closeOptions: 'header', variant: 'light', width: 'small', show: false },
+                { closeOptions: 'header', variant: 'light', width: 'medium', show: false },
+                { closeOptions: 'header', variant: 'warning', width: 'large', show: false }
+              ],
+              modalDesign: [
+                { closeOptions: 'header', variant: 'light', width: 'small', show: false }
               ]
           }
       },
       template: `
       <div>
-        <div v-for="modal  in modals">
-          <h1 style="margin-bottom: 1rem;"> Modal </h1>
-          <DButton name="Show Modal" @click="modal.show = !modal.show" />
-          <DModal v-if="modal.show" :close-button-text="modal.closeButtonText" :close-options="modal.closeOptions" @close="modal.show = !modal.show" />
+        <div>
+            <h1 style="margin-bottom: 1rem;"> Image Modal colors</h1>
+          <span v-for="modal  in modalImageColors">
+            <DButton name="Show Modal" @click="modal.show = !modal.show" />
+            <DModal v-if="modal.show" :variant="modal.variant" :colorbar="modal.colorbar" :close-button-text="modal.closeButtonText" :close-options="modal.closeOptions" @close="modal.show = !modal.show" >
+              <template #content>
+                <img src="https://via.placeholder.com/150">
+              </template>
+            </DModal> 
+          </span>
+        </div>
+        <div>
+            <h1 style="margin-bottom: 1rem;"> Text Modal colors</h1>
+          <span v-for="modal  in modalTextColors">
+            <DButton name="Show Modal" @click="modal.show = !modal.show" />
+            <DModal v-if="modal.show" :variant="modal.variant" :colorbar="modal.colorbar" :close-button-text="modal.closeButtonText" :close-options="modal.closeOptions" @close="modal.show = !modal.show" >
+              <template #content>
+                <div class="content">
+                  <h1>Level One</h1>
+                  <p>
+                      This is simple text. This is simple text. 
+                      This is simple text. This is simple text.
+                  </p>
+                </div>
+              </template>
+            </DModal> 
+          </span>
+        </div>
+        <div>
+            <h1 style="margin-bottom: 1rem;"> Image Modal widths</h1>
+          <span v-for="modal  in modalSizes">
+            <DButton name="Show Modal" @click="modal.show = !modal.show" />
+            <DModal v-if="modal.show" :variant="modal.variant" :width="modal.width" :close-button-text="modal.closeButtonText" :close-options="modal.closeOptions" @close="modal.show = !modal.show" >
+              <template #content>
+                <div class = "content">
+                  <h1>Level One</h1>
+                  <p>
+                      This is simple text. This is simple text. 
+                      This is simple text. This is simple text.
+                  </p>
+                </div>
+              </template>
+            </DModal> 
+          </span>
         </div>
       </div>
       `
