--- a/src/stories/modal.stories.mdx
+++ b/src/stories/modal.stories.mdx
@@ -32,7 +32,7 @@ import { action } from "@storybook/addon-actions";
               modalTextColors: [
                 { closeOptions: 'header', variant: 'light', show: false },
                 { closeOptions: 'header', variant: 'light', colorbar: 'success', show: false },
-                { closeOptions: 'header', variant: 'info', colorbar: 'success', show: false },
+                { closeOptions: 'header', variant: 'light', colorbar: 'info', show: false },
                 { closeOptions: 'header', variant: 'warning', colorbar: 'danger', show: false }
               ],
               modalSizes: [
@@ -41,7 +41,10 @@ import { action } from "@storybook/addon-actions";
                 { closeOptions: 'header', variant: 'warning', width: 'large', show: false }
               ],
               modalDesign: [
-                { closeOptions: 'header', variant: 'light', width: 'small', show: false }
+                { closeButtonText: 'Close', closeOptions: 'both', variant: 'light', width: 'medium', show: false }
+              ],
+              modalCard: [
+                { closeButtonText: 'Close', closeOptions: 'both', variant: 'light', width: 'medium', show: false }
               ]
           }
       },
@@ -58,7 +61,7 @@ import { action } from "@storybook/addon-actions";
             </DModal> 
           </span>
         </div>
-        <div>
+        <div style="margin-top: 2rem;">
             <h1 style="margin-bottom: 1rem;"> Text Modal colors</h1>
           <span v-for="modal  in modalTextColors">
             <DButton name="Show Modal" @click="modal.show = !modal.show" />
@@ -75,8 +78,8 @@ import { action } from "@storybook/addon-actions";
             </DModal> 
           </span>
         </div>
-        <div>
-            <h1 style="margin-bottom: 1rem;"> Image Modal widths</h1>
+        <div style="margin-top: 2rem;">
+            <h1 style="margin-bottom: 1rem;"> Modal widths</h1>
           <span v-for="modal  in modalSizes">
             <DButton name="Show Modal" @click="modal.show = !modal.show" />
             <DModal v-if="modal.show" :variant="modal.variant" :width="modal.width" :close-button-text="modal.closeButtonText" :close-options="modal.closeOptions" @close="modal.show = !modal.show" >
@@ -87,6 +90,71 @@ import { action } from "@storybook/addon-actions";
                       This is simple text. This is simple text. 
                       This is simple text. This is simple text.
                   </p>
+                </div>
+              </template>
+            </DModal> 
+          </span>
+        </div>
+        <div style="margin-top: 2rem;">
+            <h1 style="margin-bottom: 1rem;"> Modal Form</h1>
+          <span v-for="modal  in modalDesign">
+            <DButton name="Show Modal" @click="modal.show = !modal.show" />
+            <DModal v-if="modal.show" :variant="modal.variant" :width="modal.width" :close-button-text="modal.closeButtonText" :close-options="modal.closeOptions" @close="modal.show = !modal.show" >
+              <template #content>
+                <form class="has-text-centered">
+                  <p>
+                    <label for="firstName">First Name</label>
+                    <input id="firstName" type="text" />
+                  </p>
+                  <p>
+                    <label for="lastName">Last Name</label>
+                    <input id="lastName" type="text"/>
+                  </p>
+                  <p>
+                    <label for="interests">Interests</label>
+                    <textarea id="interests"></textarea>
+                  </p>
+                  <p>
+                    <input type="checkbox" id="autoLogin"/>
+                    <label for="autoLogin">Auto-login?</label>
+                  </p>
+              </form>
+              </template>
+            </DModal> 
+          </span>
+        </div>
+        <div style="margin-top: 2rem;">
+            <h1 style="margin-bottom: 1rem;"> Modal Card</h1>
+          <span v-for="modal  in modalCard">
+            <DButton name="Show Modal" @click="modal.show = !modal.show" />
+            <DModal v-if="modal.show" :variant="modal.variant" :width="modal.width" :close-button-text="modal.closeButtonText" :close-options="modal.closeOptions" @close="modal.show = !modal.show" >
+              <template #content>
+                <div class="card">
+                  <div class="card-image">
+                    <figure class="image is-4by3">
+                      <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                    </figure>
+                  </div>
+                  <div class="card-content">
+                    <div class="media">
+                      <div class="media-left">
+                        <figure class="image is-48x48">
+                          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                        </figure>
+                      </div>
+                      <div class="media-content">
+                        <p class="title is-4">John Smith</p>
+                        <p class="subtitle is-6">@johnsmith</p>
+                      </div>
+                    </div>
+                    <div class="content">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
+                      <a href="#">#css</a> <a href="#">#responsive</a>
+                      <br>
+                      <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+                    </div>
+                  </div>
                 </div>
               </template>
             </DModal> 
