--- a/src/stories/modal.stories.mdx
+++ b/src/stories/modal.stories.mdx
@@ -23,7 +23,7 @@ import { action } from "@storybook/addon-actions";
       data() {
           return {
             modalImageColors: [
-              { name: 'Image Modal', buttoncolor: 'success', closeOptions: 'header', variant: 'light', colorbar: 'danger', show: false, template: `<img src='https://via.placeholder.com/150'>` },
+              { name: 'Image Modal', buttoncolor: 'success', closeOptions: 'header', variant: 'light', colorbar: 'danger', show: false, template: `<img alt="Placeholder Image" src='https://via.placeholder.com/150'>` },
               { name:'Text Modal', buttoncolor: 'warning', closeOptions: 'header', variant: 'warning', width: 'medium', colorbar: 'danger', show: false, template: `
               <div class="content">
                 <h1>Modal Component</h1>
@@ -35,7 +35,7 @@ import { action } from "@storybook/addon-actions";
                   </ul>
                 </p>
               </div>`},
-              { name: 'Small Modal', buttoncolor: 'primary', closeOptions: 'header', variant: 'light', width: 'small', show: false, template: `<img src='https://via.placeholder.com/150'>` },
+              { name: 'Small Modal', buttoncolor: 'primary', closeOptions: 'header', variant: 'light', width: 'small', show: false, template: `<img alt="Placeholder Image" src='https://via.placeholder.com/150'>` },
               { name: 'Medium Modal', buttoncolor: 'primary', closeOptions: 'header', variant: 'light', width: 'medium', show: false, template: `
               <div class="content">
                 <h1>Modal Component</h1>
@@ -62,14 +62,14 @@ import { action } from "@storybook/addon-actions";
                 <div class="card">
                   <div class="card-image">
                     <figure class="image is-4by3">
-                      <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                      <img alt="Placeholder Image" src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                     </figure>
                   </div>
                   <div class="card-content">
                     <div class="media">
                       <div class="media-left">
                         <figure class="image is-48x48">
-                          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                          <img alt="Placeholder Image" src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
                         </figure>
                       </div>
                       <div class="media-content">
