fix: review changes

--- a/src/stories/modal.stories.mdx
+++ b/src/stories/modal.stories.mdx
@@ -23,7 +23,7 @@ import { action } from "@storybook/addon-actions";
       data() {
           return {
             modalImageColors: [
-              { name: 'Image Modal', buttoncolor: 'success', closeOptions: 'header', variant: 'light', colorbar: 'danger', show: false, template: `<img alt="Placeholder Image" src='https://via.placeholder.com/150'>` },
+              { name: 'Image Modal', buttoncolor: 'success', closeOptions: 'header', variant: 'light', width: 'small', colorbar: 'danger', show: false, template: `<img alt="Placeholder Image" src='https://via.placeholder.com/150'>` },
               { name:'Text Modal', buttoncolor: 'warning', closeOptions: 'header', variant: 'warning', width: 'medium', colorbar: 'danger', show: false, template: `
               <div class="content">
                 <h1>Modal Component</h1>
