feat: 🎸 Updated formatting and hover for toc

--- a/src/stories/toc.stories.mdx
+++ b/src/stories/toc.stories.mdx
@@ -18,7 +18,7 @@ import DTOC from '../components/d-tableofcontents.vue';
             components: {DTOC},
             template: `
             <div>
-                <DTOC :data="[{name:'About', icon:'fax'}, {name: 'People', icon:'carrot-right'}]" name="newtable"/>
+                <DTOC :data="[{name:'Mission', icon:'chatbox-line'}, {name: 'People', icon:'person-lines'}, {name: 'Oppurtunities', icon:'lightbulb-1'}, {name: 'How to Cite CCV', icon:'carrot-right'}]" name="newtable"/>
             </div>
             `
         }}
