feat: 🎸 add text color

--- a/src/stories/modal.stories.mdx
+++ b/src/stories/modal.stories.mdx
@@ -24,9 +24,9 @@ import { action } from "@storybook/addon-actions";
           return {
             modalImageColors: [
               { name: 'Image Modal', buttoncolor: 'success', closeOptions: 'header', variant: 'light', width: 'small', colorbar: 'danger', show: false, template: `<img alt="Placeholder Image" src='https://via.placeholder.com/150'>` },
-              { name:'Text Modal', buttoncolor: 'warning', closeOptions: 'header', variant: 'warning', width: 'medium', colorbar: 'danger', show: false, template: `
+              { name:'Text Modal', buttoncolor: 'warning', closeOptions: 'header', variant: 'link', width: 'medium', colorbar: 'danger', show: false, template: `
               <div class="content">
-                <h1>Modal Component</h1>
+                <h1 class="has-text-light">Modal Component</h1>
                 <p>
                   <ul>
                     <li>Triggered by button. </li>
