--- a/src/stories/toc.stories.mdx
+++ b/src/stories/toc.stories.mdx
@@ -9,7 +9,7 @@ import DTOC from '../components/d-tableofcontents.vue';
 
 # DTOC component
 ```jsx
-<DTOC />
+<DTOC :data="[{name:'Mission', icon:'chatbox-line', link:'https://datasci.brown.edu/about/'}, {name: 'People', icon:'person-lines'}, {name: 'Oppurtunities', icon:'lightbulb-1'}, {name: 'How to Cite CCV', icon:'carrot-right'}]" name="newtable"/>
 ```
 
 <Preview >
@@ -18,7 +18,7 @@ import DTOC from '../components/d-tableofcontents.vue';
             components: {DTOC},
             template: `
             <div>
-                <DTOC :data="[{name:'Mission', icon:'chatbox-line'}, {name: 'People', icon:'person-lines'}, {name: 'Oppurtunities', icon:'lightbulb-1'}, {name: 'How to Cite CCV', icon:'carrot-right'}]" name="newtable"/>
+                <DTOC :data="[{name:'Mission', icon:'chatbox-line' ,link:'https://datasci.brown.edu/about/'}, {name: 'People', icon:'person-lines'}, {name: 'Oppurtunities', icon:'lightbulb-1'}, {name: 'How to Cite CCV', icon:'carrot-right'}]" name="newtable"/>
             </div>
             `
         }}
