feat: upgrade to storybook 6

--- a/src/stories/buttons.stories.mdx
+++ b/src/stories/buttons.stories.mdx
@@ -4,7 +4,7 @@ import DButton from '../components/d-button.vue';
 import DIcon from '../components/d-icon.vue';
 import { action } from "@storybook/addon-actions";
 
-<Meta title="Elements|Buttons" component={DButton} />
+<Meta title="Elements/Buttons" component={DButton} />
 
 # Buttons
 <Props of={DButton} />
