--- a/src/stories/colors.stories.mdx
+++ b/src/stories/colors.stories.mdx
@@ -3,7 +3,7 @@ import { withA11y } from '@storybook/addon-a11y';
 import ColorPalette from '../components/colors/ColorPalette.vue';
 import { yellows, greens, colors, greys } from './colors';
 
-<Meta title="Style Guide|Colors" component={ColorPalette} decorators={[withA11y]} />
+<Meta title="Style Guide/Colors" component={ColorPalette} decorators={[withA11y]} />
 
 # Colors
 
