--- a/src/stories/hero.stories.mdx
+++ b/src/stories/hero.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import DHero from '../components/d-hero.vue';
 
-<Meta title="Elements|Hero" component={DHero} />
+<Meta title="Elements/Hero" component={DHero} />
 
 # Hero
 
