--- a/src/stories/icons.stories.mdx
+++ b/src/stories/icons.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import DIcon from '../components/d-icon.vue';
 import { icons } from './icons';
 
-<Meta title="Elements|Icons" component={DIcon} />
+<Meta title="Elements/Icons" component={DIcon} />
 
 # Icons
 
