--- a/src/stories/logos.stories.mdx
+++ b/src/stories/logos.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import BrownLogo from '../components/logos/BrownLogo.vue';
 import CCVLogo from '../components/logos/CCVLogo.vue';
 
-<Meta title="Elements|Logos" component={BrownLogo, CCVLogo} />
+<Meta title="Elements/Logos" component={BrownLogo, CCVLogo} />
 
 # Logos
 
