--- a/src/stories/typography.stories.mdx
+++ b/src/stories/typography.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import Typography from '../components/typography/Typography.vue';
 import Sizing from '../components/typography/Sizing.vue';
 
-<Meta title="Style Guide|Typography"/>
+<Meta title="Style Guide/Typography"/>
 
 # Typography
 
