--- a/src/stories/cards.stories.mdx
+++ b/src/stories/cards.stories.mdx
@@ -18,15 +18,44 @@ import DCard from '../components/d-card.vue';
     {{
       components: {DCard},
       template: `
-      <div style="display: flex; align-items: center;">
-        <DCard title="Standard" buttonLabel="Read More">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco 
-          </p>
-        </DCard>
+      <div style="margin: 1rem;">
+        <h1 style="margin-bottom: 1rem;">Card Sizes</h1>
+        <div class="columns">
+          <div class="column">
+            <DCard title="Standard" buttonLabel="Read More">
+              <template slot="content">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor 
+              </p>
+              </template>
+            </DCard>
+          </div>
+          <div class="column">
+            <DCard title="Standard" size="medium" buttonLabel="Read More">
+              <template slot="content">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco 
+              </p>
+              </template>
+            </DCard>
+          </div>
+          <div class="column">
+            <DCard title="Standard" size="large" buttonLabel="Read More">
+              <template slot="content">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco 
+              </p>
+              </template>
+            </DCard>
+          </div>
+        </div>
       </div>
       `
     }}
