chore: merge TOC

--- a/src/stories/toc.stories.mdx
+++ b/src/stories/toc.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import DTOC from '../components/d-tableofcontents.vue';
+import DTOC from '../components/d-table-of-contents.vue';
 
-<Meta title="Elements|Table of Contents" component={DTOC} />
+<Meta title="Elements/Table of Contents" component={DTOC} />
 
 # Table of Contents
 
